# leafpad

./: .gitignore  Makefile.am  README  config.h.in  configure  configure.ac  mkinstalldirs
data/: Makefile.am  leafpad.desktop.in
po/: Makefile.am
src/: Makefile.am  about.c  callback.c  callback.h  dnd.c  emacs.c  file.c  gnomeprint.c  gtkprint.c  gtksourceiter.c  hlight.c  indent.c  indent.h  leafpad.h  linenum.c  main.c  menu.c  menu.h  recent.c  recent.h  search.c  selector.c  undo.c  utils.c  view.c  window.c
